fix desktop mobile menu issue...work on mobile issue

--- a/app/components/MobileNavMenu/component.module.css
+++ b/app/components/MobileNavMenu/component.module.css
@@ -32,3 +32,9 @@
     }
   }
 }
+
+@media (min-width: 701px) {
+  .mobileNavMenuContainer {
+    display: none;
+  }
+}
